# d2p2

./: .gitignore  CMakeCommon.txt  CMakeLists.txt  README.md  conv2d.py  conv_trans.py
d2p2/: d2p2.h  function.h  layer.h  tensor.h  util.h
d2p2/img/: cppimg.h
devel/: CMakeLists.txt  main.cpp
python/: conv.py  conv2d.py  conv2d_trans.py  conv_trans.py  linear.py
src/: d2p2.cpp  function.cpp  layer.cpp  tensor.cpp  util.cpp
src/ispc/: matrix.ispc  matrix.ispc.h
test/: CMakeLists.txt  main.cpp  test_function.cpp  test_network.cpp  test_tensor.cpp  test_vector.cpp
test_trans/: test_trans.cpp  test_trans.sln
